--- a/animals.html
+++ b/animals.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="header">
-        <img src="images/logo.png" alt="logo"/>
+        <img src="/images/logo.png" alt="logo"/>
     </div>
     <div id="tabs-top">
         <a href="#">ANIMALS</a>
